# xrx-core

./: .gitignore  404.html  CODE_OF_CONDUCT.md  README.md  SECURITY.md  contributing.md  index.html  lunr-index-1726581815573.json  lunr-index-1726591230464.json  lunr-index-1726598086756.json  lunr-index-1726598618722.json  lunr-index-1726776881578.json  lunr-index-1727190778150.json  lunr-index-1727305240844.json  lunr-index-1727310950365.json  lunr-index-1727311271357.json  lunr-index-1727312940839.json  lunr-index-1727313077190.json  lunr-index-1727457513859.json  lunr-index-1728601588829.json  lunr-index-1729727825672.json  lunr-index-1733877677534.json  lunr-index-1733878204208.json  lunr-index-1734646459795.json  package-lock.json  search-doc-1726581815573.json  search-doc-1726591230464.json  search-doc-1726598086756.json  search-doc-1726598618722.json  search-doc-1726776881578.json  search-doc-1727190778150.json  search-doc-1727305240844.json  search-doc-1727310950365.json  search-doc-1727311271357.json  search-doc-1727312940839.json  search-doc-1727313077190.json  search-doc-1727457513859.json  search-doc-1728601588829.json  search-doc-1729727825672.json  search-doc-1733877677534.json  (+3 more)
agent_framework/: xrx_reasoning.py
agent_framework_pip/: README.md  pyproject.toml
agent_framework_pip/agent_framework/: __init__.py
docs/: README.md  package-lock.json  (+3 more)
xrx_agent_framework/: README.md  pyproject.toml
xrx_agent_framework/xrx_agent_framework/: __init__.py  xrx_reasoning.py
xrx_agent_framework/xrx_agent_framework/utils/: llm.py  state_machine.py  testing.py
(+266 files in other folders)
